src/test/resources/syntax/invalid/group_definition_class_constant_for_int.unpick
unpick v3
const int
    class Foo = Foo.bar